--- a/styles/style.css
+++ b/styles/style.css
@@ -34,4 +34,12 @@ button {
     margin: 10px;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
+    transition: 0.5s ease-out; 
+}
+
+button:hover {
+opacity: 0.4;
+color: rgb(36, 52, 67);
+background-color: beige;
 }
