Timer is now working, I need to add a random quote generator in the project.

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ background-size:auto;
 background-repeat: no-repeat;
 }
 
-.container {
+.container, #quote-container {
     margin: 0 auto;
     max-width: 800px;
     text-align: center;
